# cl-keeper

./: .changelog.yaml  .cl-keeper.yaml  .cl_keeper.yaml  .coveragerc.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yaml  conftest.py  pyproject.toml  pytest.toml  tox.toml
.github/: dependabot.yml
.github/workflows/: a.yaml  ci.yaml  release.yaml  test_action.yaml
ch_keeper/: __init__.py  app.py  check.py  config.py  context.py  fix.py  parse.py  render.py  sort.py  vcs.py
changelog_keeper/: app.py  check.py  config.py  context.py  fix.py  model.py  parse.py  render.py  sort.py  typing.py  vcs.py
cl_keeper/: __init__.py  __main__.py  app.py  check.py  config.py  context.py  fix.py  model.py  parse.py  render.py  sort.py  vcs.py
docs/: Makefile
docs/source/: advanced.rst  conf.py  config.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: extra.css
scripts/: update_branches
test/: test_check.py  test_parse.py  test_sort.py  test_vcs.py
test/test_check/: test_check_duplicate_releases_normalize_version_.yml  test_check_duplicate_releases_normalize_version_wrong_links_.yml  test_check_duplicate_releases_wrong_links_.yml  test_check_duplicate_subsections_.yml  test_check_duplicate_subsections_normalize_.yml  test_check_duplicate_unreleased_.yml  test_check_empty_.yml  test_check_empty_release_.yml  test_check_empty_subsection_.yml  test_check_empty_unknown_subsection_.yml  test_check_item_categories_in_release_sub_section_format_error_.yml  test_check_item_categories_in_release_sub_section_order_.yml  test_check_item_categories_in_release_trivia_order_.yml  test_check_item_categories_in_unversioned_sub_section_multiple_change_lists_.yml  test_check_item_categories_in_unversioned_sub_section_unknown_.yml  test_check_item_categories_in_unversioned_trivia_format_error_.yml  test_check_item_categories_in_unversioned_trivia_multiple_change_lists_.yml  test_check_item_categories_in_unversioned_trivia_unknown_.yml  test_check_missing_link_.yml  test_check_missing_link_empty_link_template_.yml  test_check_missing_release_date_.yml  test_check_missing_unreleased_.yml  test_check_missing_unreleased_link_empty_template_.yml  test_check_no_item_categories_in_release_.yml  test_check_no_item_categories_in_subsection_.yml  test_check_release_dates.yml  test_check_right_links_wrong_order_.yml  test_check_tags.yml  test_check_unexpected_first_level_heading_.yml  test_check_unexpected_link_.yml  test_check_unexpected_release_date_.yml  test_check_unexpected_unreleased_link_.yml  test_check_unknown_subsections_in_trivia_sections_.yml  test_check_unreleased_not_first_.yml  test_check_unreleased_not_first_and_wrong_order_.yml  test_check_wrong_links_.yml  test_check_wrong_links_and_order_.yml  test_check_wrong_links_no_unreleased_.yml  test_check_wrong_links_right_order_.yml  test_check_wrong_order_.yml  (+3 more)
test/test_parse/: test_parse_first_level_heading_in_the_middle_.yml  test_parse_item_categories_in_release_sub_section_multiple_change_lists_.yml  test_parse_item_categories_in_release_sub_section_unknown_.yml  test_parse_item_categories_in_release_trivia_.yml  test_parse_item_categories_in_release_trivia_multiple_change_lists_.yml  test_parse_item_categories_in_unversioned_sub_section_multiple_change_lists_.yml  test_parse_item_categories_in_unversioned_sub_section_unknown_.yml  test_parse_item_categories_in_unversioned_trivia_.yml  test_parse_item_categories_in_unversioned_trivia_multiple_change_lists_.yml  test_parse_multiple_releases_with_sections_.yml  test_parse_only_heading_.yml  test_parse_release_.yml  test_parse_release_linked_.yml  test_parse_release_unlinked_.yml  test_parse_release_unlinked_with_date_before_version_.yml  test_parse_release_with_broken_date_.yml  test_parse_release_with_date_and_postfix_.yml  test_parse_release_with_date_and_postfix_braces_.yml  test_parse_release_with_date_before_version_.yml  test_parse_release_with_decorations_ok_.yml  test_parse_release_with_postfix_.yml  test_parse_release_with_prefix_.yml  test_parse_subsection_format_error_.yml  test_parse_subsection_not_attached_.yml  test_parse_unrecognized_section_.yml  test_parse_unreleased_linked_.yml  test_parse_unreleased_simple_.yml  test_parse_unreleased_subsections_.yml  test_parse_unreleased_unlinked_.yml  test_parse_version_canonization_fail_.yml  test_parse_version_canonization_none_.yml  test_parse_version_canonization_ok_.yml
typings/giturlparse/: __init__.pyi
