[project]
name = "cl-keeper"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "A CLI tool for keeping your changelogs tidy"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "yuio>=2.0.0.b5,<3.0",
    "giturlparse==0.12.0",
    "markdown-it-py==3.0.0",
    "mdformat==0.7.22",
    "mdformat-gfm==0.4.1",
    "mdformat_footnote==0.1.1",
    "mdformat_frontmatter==2.0.8",
    "mdformat_gfm_alerts==2.0.0",
    "mdformat_tables==1.0.0",
    "semver==3.0.4",
    "packaging==25.0",
    "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
    "pytest-cov==7.0.0",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "doc"},
]
test = [
    "pyright==1.1.406",
    "pytest==8.4.2",
    "sybil==9.2.0",
    "pytest-regressions==2.8.3",
]
lint = [
    "black==25.9.0",
    "isort==6.1.0",
    "pre-commit==4.3.0",
]
doc = [
    "sybil==9.2.0",
    "furo==2025.9.25",
    "sphinx_design==0.6.1",
]

[project.urls]
Documentation = "https://cl-keeper.readthedocs.io/en/stable/"
Issues = "https://github.com/taminomara/cl-keeper/issues/"
Source = "https://github.com/taminomara/cl-keeper/"
Changelog = "https://github.com/taminomara/cl-keeper/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cl_keeper"]

[project.scripts]
chk = "cl_keeper.app:main.run"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "cl_keeper/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "cl_keeper", "docs"]

[tool.pyright]
include = ["cl_keeper"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.cl_keeper]
version_format = "python-semver"
