[project]
name = "cl-keeper"
authors = [{ name = "Tamika Nomara", email = "taminomara@gmail.com" }]
description = "A CLI tool for keeping your changelogs tidy"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "yuio>=2.0.0,<3",
    "giturlparse==0.13.0",
    "markdown-it-py==4.0.0",
    "mdformat==1.0.0",
    "mdformat-gfm==1.0.0",
    "mdformat_footnote==0.1.2",
    "mdformat_gfm_alerts==2.0.0",
    "semver==3.0.4",
    "packaging==25.0",
    "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
    "pytest-cov==7.0.0",
    "sphinx-autobuild==2025.8.25",
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "doc" },
]
test = [
    "pyright==1.1.406",
    "pytest==8.4.2",
    "sybil==9.2.0",
    "pytest-regressions==2.8.3",
]
lint = ["ruff==0.14.10", "pre-commit==4.5.1"]
doc = ["sybil==9.2.0", "furo==2025.9.25", "sphinx_design==0.6.1"]

[project.urls]
Documentation = "https://cl-keeper.readthedocs.io/en/stable/"
Issues = "https://github.com/taminomara/cl-keeper/issues/"
Source = "https://github.com/taminomara/cl-keeper/"
Changelog = "https://github.com/taminomara/cl-keeper/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cl_keeper"]

[project.scripts]
clk = "cl_keeper.__main__:main.run"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "cl_keeper/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "cl_keeper", "docs"]

[tool.pyright]
include = ["cl_keeper"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
exclude = ["examples/docs/*", "yuio/_vendor/*"]
target-version = "py312"

[tool.ruff.lint]
typing-modules = ["yuio._typing"]
extend-select = ["I", "INP", "T20", "PT", "RET", "SIM", "SLOT", "RUF022"]
ignore = [
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "E741",   # Ambiguous variable name
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "PT015",  # Assertion is always `False`
    "PT011",  # Too broad error type
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "PT017",  # Found assertion on exception `e` in `except` block
    "RET505", # Unnecessary `else` after `return` statement
    "RET506", # Unnecessary `else` after `raise` statement
    "RET507", # Unnecessary `else` after `continue` statement
    "RET508", # Unnecessary `else` after `break` statement
    "SIM103", # Return the negated condition directly
    "SIM105", # Use `contextlib.suppress` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM114", # Combine `if` branches using logical `or` operator
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "T201",   # Remove print
]
extend-safe-fixes = [
    "RUF022", # Sort `__all__`.
    "PT006",  # Rewrite arguments for `pytest.mark.parametrize`.
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"test/**/*" = ["T20", "I002", "SIM102", "SIM117"]
"docs/**/*" = ["T20", "I002", "INP001"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true
